# python-hid-parser

./: .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/: CODEOWNERS
.github/workflows/: checks.yml  tests.yml
hid_parser/: __init__.py  data.py
hid_parser/data/: __init__.py
tests/: linux-hidpp-print.txt  simple-mouse-print.txt  test_data.py  test_items.py  test_parse.py  test_print.py  test_repr.py  test_usage.py  test_util.py
