[build-system]
requires = ['setuptools >= 40.8.0', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
extend-select = [
  'B',    # flake8-bugbear
  'C4',   # flake8-comprehensions
  'C9',   # mccabe
  'I',    # isort
  'PGH',  # pygrep-hooks
  'RUF',  # ruff
  'UP',   # pyupgrade
  'W',    # pycodestyle
  'YTT',  # flake8-2020
  'TRY',  # tryceratops
  'EM',   # flake8-errmsg
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2
