[build-system]
requires = ['flit_core >=3.2,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'hid-parser'
description = 'Typed pure Python library to parse HID report descriptors'
version = '0.1.0'
readme = 'README.md'
requires-python = '>= 3.9'
license = {file = 'LICENSE'}
authors = [{ name = 'Filipe Laíns', email = 'lains@riseup.net' }]
classifiers = [
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
]
urls.homepage = 'https://github.com/usb-tools/python-hid-parser'
urls.issues = 'https://github.com/usb-tools/python-hid-parser/issues'
urls.source = 'https://github.com/usb-tools/python-hid-parser'
dependencies = [
  'typing_extensions >= 4.4.0; python_version < "3.13"'
]

[dependency-groups]
test = [
  'pytest',
  'pytest-cov',
  'hypothesis'
]
dev = [
  'mypy',
  'nox',
]

[tool.uv]
default-groups = ['test', 'dev']

[tool.ruff]
line-length = 120
target-version = 'py39'

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
extend-select = [
  'B',    # flake8-bugbear
  'C4',   # flake8-comprehensions
  'C9',   # mccabe
  'I',    # isort
  'PGH',  # pygrep-hooks
  'RUF',  # ruff
  'UP',   # pyupgrade
  'W',    # pycodestyle
  'YTT',  # flake8-2020
  'TRY',  # tryceratops
  'EM',   # flake8-errmsg
]

[tool.ruff.lint.extend-per-file-ignores]
'tests/**.py' = ['RUF012']

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2

[tool.mypy]
python_version = '3.9'
strict = true
show_error_codes = true

[tool.coverage.html]
show_contexts = true
