[metadata]
name = hid-parser
version = 0.0.1
long_description = file: README.md
long_description_content_type = text/markdown
author = Filipe Laíns
author_email = lains@archlinux.org
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
url = https://github.com/FFY00/python-hid-parser

[options]
packages = find:
python_requires = >=3.6, <4
install_requires =
    typing-extensions; python_version < '3.8'

[flake8]
max-line-length = 127
max-complexity = 10

[mypy]
ignore_missing_imports = True
strict = True

[isort]
line_length = 127
lines_between_types = 1
lines_after_imports = 2
known_first_party = hid_parser
default_section = THIRDPARTY
